# AES-NSU-test-task

./: CMakeLists.txt  README.md  Тестовое задание.txt
configs/: server-info.json
qml/: main.qml
src/: backend.cpp  backend.hpp  main.cpp  server-info.cpp  server-info.hpp
src/client/: abstract-client.cpp  abstract-client.hpp  backend.cpp  backend.hpp  cli_thread.cpp  cli_thread.hpp  client.cpp  client.hpp
src/commands/: abstract-command.cpp  abstract-command.hpp  command-registrar.hpp
src/commands/factory/: command-factory.cpp  command-factory.hpp
src/commands/get-data/: get-data.cpp  get-data.hpp
src/commands/get-data-size/: get-data-size.cpp  get-data-size.hpp
src/commands/get-state/: get-state.cpp  get-state.hpp
src/commands/registrar/: command-registrar.hpp
src/commands/validator/: command-validator.cpp  command-validator.hpp
src/entity/: server-info.hpp
src/server/: server.cpp
